crates/plotnik-tests/tests/03-analyze/alternations/mixed_enum_first.txt
Q = [
  A: (a)
  (b)
]
------------------ DIAGNOSTICS -------------------
error: cannot mix enum and union branches
 --> query.ptk:3:3
  |
2 |   A: (a)
  |   - labeled alternative here
3 |   (b)
  |   ^^^
  |
help: use all labels for an enum, or none for a merged struct
-------------------- SYMBOLS ---------------------
